--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Automation/Maven/softwares/testng-xslt-1.1.2-master/lib/saxon-8.7.jar"/>
+	<classpathentry kind="lib" path="D:/Automation/Maven/softwares/testng-xslt-1.1.2-master/lib/SaxonLiaison.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
